--- a/style.css
+++ b/style.css
@@ -54,11 +54,23 @@ header{
     width: 100%;
     margin-top: 2%;
     margin-bottom: 2%;
+    height: 500px;
+    background-image: url(img/banner.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
     
     /* debug */
-    height: 300px;
-    background-color:rgba(225,214,122,255);
+    /* background-color:rgba(225,214,122,255); */
 }
+/* #jumbotron img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    object-position: 50% 50%;
+} */
+
 .clearfix{
     /* debug */
     background-color: #0086ff;
