--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ header{
     margin-bottom: 2%;
     height: 500px;
     background-image: url(img/banner.jpg);
-    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -70,6 +69,20 @@ header{
     object-fit: cover; 
     object-position: 50% 50%;
 } */
+#bannertext{
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+
+    padding-top: 28%;
+    padding-right: 45%;
+    padding-left: 3%;
+    font-size: 28px;
+    color:whitesmoke;
+}
+#bannertext p{
+    font-size: 14px;
+}
 
 .clearfix{
     /* debug */
