--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ header{
     width: 22%;
    
     /* debug */
-    height: 300px;
+    /* height: 300px; */
 
 }
 /* .img-settings{
@@ -168,7 +168,7 @@ header{
     margin:0 1%;
     
     /* debug */
-    height: 300px;
+    /* height: 300px; */
     
 }
 #img-main{
@@ -192,14 +192,31 @@ header{
     border-radius: 10px;
 
 }
+.paragraphtitle{
+    margin: 10px 0;
+    color: black;
+    font-size: 14px;
+}
+.slot p{
+    font-size: 14px;
+
+}
 
 
 footer{
     width: 100%;
-    margin-top: 1.5%;
+    margin-top: 5%;
+    text-align: center;
+
+
 
     /* debug */
-    height: 50px;
-    background-color: #8801fe;
+    /* height: 50px;
+    background-color: #8801fe; */
 
+}
+#heart {
+    color: red;
+    font-size: 25px;
+    font-weight: 900;
 }
